--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     </form>
     <hr>
     <footer>
-        <p>Contact us at: info@laundarymart.com</p>
+        <p>Contact us at: info@laundarywallah.com</p>
     </footer>
 </body>
+
 </html>
